--- a/source/Solution/CLI/CLI.csproj
+++ b/source/Solution/CLI/CLI.csproj
@@ -49,7 +49,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>EnigmaMM.Program</StartupObject>
+    <StartupObject>EnigmaMM.CLIProgram</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -62,7 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CLI.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="CLIProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
