--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mappers\AlphaVespucci.cs" />
     <Compile Include="CLIHelper.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="CSocketPacket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -50,6 +52,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="MCServer.cs" />
+    <Compile Include="MCServerProperties.cs" />
+    <Compile Include="ServerMessageEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
