--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -45,11 +45,14 @@
     <Compile Include="Mappers\AlphaVespucci.cs" />
     <Compile Include="CLIHelper.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="Mappers\Mapper.cs" />
     <Compile Include="Mappers\Overviewer.cs" />
+    <Compile Include="MCServerWarps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MCServer.cs" />
     <Compile Include="MCServerProperties.cs" />
     <Compile Include="ServerMessageEventArgs.cs" />
+    <Compile Include="SettingsFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
