--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="CommandEventArgs.cs" />
     <Compile Include="CommsManager.cs" />
+    <Compile Include="SavedUser.cs" />
     <Compile Include="SocketPacket.cs" />
     <Compile Include="Mappers\AlphaVespucci.cs" />
     <Compile Include="CLIHelper.cs" />
@@ -63,6 +64,12 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LibNbt\LibNbt.csproj">
+      <Project>{4488498D-976D-4DA3-BF72-109531AF0488}</Project>
+      <Name>LibNbt</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
