--- a/source/Solution/LibNbt/LibNbt.csproj
+++ b/source/Solution/LibNbt/LibNbt.csproj
@@ -62,5 +62,9 @@
     <Compile Include="Tags\NbtTag.cs" />
     <Compile Include="Tags\NbtTagType.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="libnbt.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
