--- a/source/Solution/EMM/sample.settings.conf
+++ b/source/Solution/EMM/sample.settings.conf
@@ -42,6 +42,10 @@
 ### increase the time it takes to generate maps.
 #CacheRoot=.\Cache
 
+### BackupRoot
+### The location to use for backups.
+#BackupRoot=.\Backup
+
 
 
 ### ============================================================================
