--- a/source/Solution/EMM/sample.settings.conf
+++ b/source/Solution/EMM/sample.settings.conf
@@ -9,8 +9,10 @@
 ### ServerListenIP
 ### The ip address that the server manager should listen on for client
 ### connections.
-### Useful for servers with multiple IP addresses, set to `any` to listen on all
-### addresses, or an IP address to listen just on that one address
+### Useful for servers with multiple IP addresses, set to 
+###   "any" to listen on all addresses, 
+###   an IP address to listen just on that one address
+###   "none" to disable the remote listener
 #ServerListenIp=any
 
 ### ServerListenPort
