--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -48,10 +48,11 @@
   <ItemGroup>
     <Compile Include="Backup.cs" />
     <Compile Include="CommandEventArgs.cs" />
+    <Compile Include="CommandParser.cs" />
     <Compile Include="CommsManager.cs" />
     <Compile Include="MCServerMessage.cs" />
     <Compile Include="SavedUser.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="CommsServer.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SocketPacket.cs" />
     <Compile Include="Mappers\AlphaVespucci.cs" />
