Changed the Observable Collection to use Invoke, instead of BeginInvoke, because of the locking issues.

--- a/source/Solution/Server/Server.csproj
+++ b/source/Solution/Server/Server.csproj
@@ -62,7 +62,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BeginInvokeOC.cs" />
+    <Compile Include="InvokeOC.cs" />
     <Compile Include="LogListItem.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
