Moved the deployment around a bit

--- a/source/Solution/EMM/sample.settings.conf
+++ b/source/Solution/EMM/sample.settings.conf
@@ -2,10 +2,6 @@
 ### Server options
 ### ============================================================================
 
-### ServerRoot
-### Full path to where the Minecraft server is located.
-#ServerRoot=..\
-
 ### ServerListenIP
 ### The ip address that the server manager should listen on for client
 ### connections.
@@ -13,7 +9,7 @@
 ###   "any" to listen on all addresses, 
 ###   an IP address to listen just on that one address
 ###   "none" to disable the remote listener
-#ServerListenIp=any
+#ServerListenIp=none
 
 ### ServerListenPort
 ### The port that the server manager should listen on for client connections.
