--- a/source/Solution/MinecraftSimulator/MinecraftSimulator.csproj
+++ b/source/Solution/MinecraftSimulator/MinecraftSimulator.csproj
@@ -50,14 +50,14 @@
     <Compile Include="Simulator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="server.properties">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="warps.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="server.properties">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
