--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -50,23 +50,23 @@
     <Compile Include="Backup.cs" />
     <Compile Include="CommandEventArgs.cs" />
     <Compile Include="CommandParser.cs" />
-    <Compile Include="CommsManager.cs" />
+    <Compile Include="Comms\CommsManager.cs" />
     <Compile Include="Mappers\MapManager.cs" />
     <Compile Include="MCServerMessage.cs" />
     <Compile Include="SavedUser.cs" />
-    <Compile Include="CommsServer.cs" />
-    <Compile Include="Settings.cs" />
-    <Compile Include="SocketPacket.cs" />
+    <Compile Include="Comms\CommsServer.cs" />
+    <Compile Include="Settings\Settings.cs" />
+    <Compile Include="Comms\SocketPacket.cs" />
     <Compile Include="Mappers\AlphaVespucci.cs" />
     <Compile Include="CLIHelper.cs" />
     <Compile Include="Mappers\Mapper.cs" />
     <Compile Include="Mappers\Overviewer.cs" />
-    <Compile Include="MCServerWarps.cs" />
+    <Compile Include="Settings\MCServerWarps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MCServer.cs" />
-    <Compile Include="MCServerProperties.cs" />
+    <Compile Include="Settings\MCServerProperties.cs" />
     <Compile Include="ServerMessageEventArgs.cs" />
-    <Compile Include="SettingsFile.cs" />
+    <Compile Include="Settings\SettingsFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
