Simulator now doesn't automate by default, and messages renamed to prevent conflict with server messages.

--- a/source/Solution/MinecraftSimulator/MinecraftSimulator.csproj
+++ b/source/Solution/MinecraftSimulator/MinecraftSimulator.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="controller.ico" />
-    <Content Include="messages.xml">
+    <Content Include="messages.simulator.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="warps.txt">
