--- a/source/Solution/Tests/Tests.csproj
+++ b/source/Solution/Tests/Tests.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ScheduleManagerTests.cs" />
     <Compile Include="ScheduleTaskTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerTests.cs" />
