--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -51,8 +51,9 @@
     <Compile Include="CommandEventArgs.cs" />
     <Compile Include="CommandParser.cs" />
     <Compile Include="Comms\CommsManager.cs" />
+    <Compile Include="Interfaces\IMapper.cs" />
     <Compile Include="Mappers\MapManager.cs" />
-    <Compile Include="MCServerMessage.cs" />
+    <Compile Include="EMMServerMessage.cs" />
     <Compile Include="SavedUser.cs" />
     <Compile Include="Comms\CommsServer.cs" />
     <Compile Include="Scheduler\SchedulerManager.cs" />
@@ -65,7 +66,7 @@
     <Compile Include="Mappers\Overviewer.cs" />
     <Compile Include="Settings\MCServerWarps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MCServer.cs" />
+    <Compile Include="EMMServer.cs" />
     <Compile Include="Settings\MCServerProperties.cs" />
     <Compile Include="ServerMessageEventArgs.cs" />
     <Compile Include="Settings\SettingsFile.cs" />
