Refactored EMMServer to implement an interface, for better atomicity and testability

--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CommandParser.cs" />
     <Compile Include="Comms\CommsManager.cs" />
     <Compile Include="Interfaces\IMapper.cs" />
+    <Compile Include="Interfaces\IServer.cs" />
     <Compile Include="Mappers\MapManager.cs" />
     <Compile Include="EMMServerMessage.cs" />
     <Compile Include="SavedUser.cs" />
